packages/typ/tests/fixtures/diagnostics/0246_fun_explicit_poly_returns_int_01.ml.expected
File "0246_fun_explicit_poly_returns_int_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0246_fun_explicit_poly_returns_int_01 is not a valid module name.

File "0246_fun_explicit_poly_returns_int_01.ml", line 1, characters 31-41:
1 | let bad_alpha : 'a. 'a -> 'a = fun _ -> 0
                                   ^^^^^^^^^^
Error: This definition has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
