packages/typ/tests/fixtures/diagnostics/0246_fun_explicit_poly_returns_int_01.ml
let bad_alpha : 'a. 'a -> 'a = fun _ -> 0
